--- a/style.css
+++ b/style.css
@@ -90,3 +90,34 @@ html {
 
 
 /* Timer Code */
+
+.timer-container {
+    width: 330px;
+    height: 200px;
+    z-index: 6;
+}
+
+.timer {
+    width: 400px;
+    height: 100px;
+    z-index: 7;
+}
+
+.timer div {
+    font-size: 70px;
+    font-weight: 100;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 10px 0 10px;
+}
+
+.timer .colon {
+    background-color: transparent;
+    width: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    padding-bottom: 15px;
+}
