--- a/styles/style.css
+++ b/styles/style.css
@@ -193,3 +193,145 @@ BELOW THIS COMMENT, KEEP BELOW COMMENTED OUT UNLESS TESTING
     margin-right: 0;
     padding-bottom: 15px;
 }
+
+/* 
+Bottom Bar Code
+*/
+
+.bottom-bar {
+    background-color: red;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 5%;
+    z-index: 0;
+
+    
+}
+
+
+.todo-list {
+    background-color: blue;
+    bottom: 0;
+    width: 20%;
+    height: 80%;
+    z-index: 1;
+    
+    margin: 0;
+    margin-left: .25%;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    
+
+}
+
+.todo-show-btn {
+    background-color: gray;
+    width: 10%;
+    height: 100%;
+    z-index: 2;
+    position: relative;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.todo-entry {
+    background-color: yellow;
+    width: 80%;
+    height: 80%;
+    z-index: 2;
+    float: left;
+    padding: auto;
+    
+    margin: 0;
+    position: relative;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.todo-add {
+    background-color: green;
+    width: 20%;
+    height: 80%;
+    z-index: 2;
+    float: right;
+    padding: auto;
+
+    margin: 0;
+    position: relative;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.audio-bar{
+    background-color: purple;
+    width: 30%;
+    height: 80%;
+    z-index: 1;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);    
+} 
+
+.distraction-list {
+    background-color: black;
+    bottom: 0;
+    width: 20%;
+    height: 80%;
+    z-index: 1;
+    
+    margin: 0;
+    margin-left: 79.69%; 
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.distraction-entry {
+    background-color: orange;
+    width: 80%;
+    height: 80%;
+    z-index: 2;
+    float: left;
+    padding: auto;
+    
+    margin: 0;
+    position: relative;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.distraction-show-btn {
+    background-color: gray;
+    width: 10%;
+    height: 100%;
+    z-index: 2;
+    position: relative;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.distraction-add {
+    background-color: pink;
+    width: 20%;
+    height: 80%;
+    z-index: 2;
+    float: right;
+    padding: auto;
+
+    margin: 0;
+    position: relative;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
